# proxysaur

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
ca/: Cargo.toml  README.md
ca/src/: cli.rs  lib.rs
ca/src/scripts/: config.conf  generateca.sh  generatecert.sh
config/: Cargo.toml
config/src/: cli.rs  lib.rs
config/src/tests/: config.toml
examples/: config.yaml
http-forward-proxy/: Cargo.toml  README.md
http-forward-proxy/src/: pre_request.rs  request.rs  response.rs
http-forward-proxy/src/config/: intercept.rs  mod.rs  redirect.rs  rewrite.rs
protocol-interfaces/: Cargo.toml
protocol-interfaces/src/http/: mod.rs  request.wit  types.wit
protocol-interfaces/src/http/request/: bindings.rs
protocol-interfaces/src/http/response/: bindings.rs  mod.rs
protocols/: Cargo.toml  README.md
protocols/src/http/: config.rs  hostname.rs  mod.rs  proxy.rs  request.wit  response.wit  types.wit
protocols/src/http/pre_request/: bindings.rs  mod.rs
protocols/src/http/request/: mod.rs
protocols/src/http/response/: bindings.rs  mod.rs
protocols/src/http/tests/http-pre-request/: Cargo.toml
protocols/src/http/tests/http-pre-request/src/: main.rs
protocols/src/http/tests/http-request/: Cargo.toml
protocols/src/http/tests/http-request/src/: main.rs
protocols/src/http/tests/http-response/: Cargo.toml
protocols/src/http/tests/http-response/src/: main.rs
protocols/src/tcp/: mod.rs
src/: config.rs  main.rs  proxy.rs  starter.yml  wasi.rs
src/test_data/: config.toml
src/tests/: config.toml
src/tests/http-request/: Cargo.toml
wasi-runtime/: Cargo.toml
wasi-runtime/src/: lib.rs
wit-bindings/: README.md
wit-bindings/export/: Cargo.toml
wit-bindings/export/src/config/: bindings.rs
wit-bindings/export/src/http/: bindings.rs  mod.rs
wit-bindings/import/: Cargo.toml
wit-bindings/import/src/: config.wit  lib.rs  pre-request.wit  request.wit  response.wit  types.wit
wit-bindings/import/src/config/: mod.rs
wit-bindings/import/src/http/: mod.rs
wit-bindings/tests/http-pre-request/: Cargo.toml
wit-bindings/tests/http-pre-request/src/: main.rs
wit-bindings/tests/http-request/: Cargo.toml
wit-bindings/tests/http-request/src/: main.rs
wit-bindings/tests/http-response/: Cargo.toml
wit-bindings/tests/http-response/src/: main.rs
