[package]
name = "proxysaur"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
protocols = { path = "protocols" }
anyhow = "1.0.56"
clap = { version = "3.1.9", features = ["derive"] }
futures = "0.3.21"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-native-tls = "0.3.0"
toml = "0.5.9"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
wasmtime = "0.35.3"
wasmtime-wasi = "0.35.3"

[dev-dependencies]
http-request = { path = "src/tests/http-request" }
tempdir = "0.3.7"