[package]
name = "proxysaur"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = [
    "protocols/src/http/tests/http-request",
    "protocols/src/http/tests/http-response",
    "protocols/src/http/tests/http-pre-request"
]

[dependencies]
protocols = { path = "protocols" }
wasi-runtime = { path = "wasi-runtime" }
config = { path = "config" }
ca = { path = "ca" }
anyhow = "1.0.56"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-native-tls = "0.3.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
wasmtime = "0.35.3"
wasmtime-wasi = "0.35.3"

[dev-dependencies]