[package]
name = "proxysaur"
version = "0.1.0"
edition = "2021"

[workspace]
exclude = [
    "wit-bindings/tests/http-pre-request",
    "wit-bindings/tests/http-request",
    "wit-bindings/tests/http-response",
    "http-forward-proxy"
]

[dependencies]
protocols = { path = "protocols" }
wasi-runtime = { path = "wasi-runtime" }
config = { path = "config" }
ca = { path = "ca" }
anyhow = "1.0.56"
directories = "4.0.1"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["full"] }
tokio-native-tls = "0.3.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
wasmtime = "0.35.3"
wasmtime-wasi = "0.35.3"

[dev-dependencies]

[profile.release]
strip = true
opt-level = "z"
lto = true