[package]
name = "ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
chrono = "0.4"
directories = "4.0.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.13.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["io"] }
tokio-rustls = "0.23.1"
rustls-pemfile = "0.2.1"
tokio-stream = "0.1.8"
thiserror = "1.0"
tempdir = "0.3.7"
tracing = "0.1.34"