[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.12", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"

[dev-dependencies]
tempdir = "0.3.7"