[package]
name = "protocol-interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
thiserror = "1.0.30"
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "43411623c132801a2ac1bfc338e9b988e9a8bacb", features = ["async"] }