[package]
name = "wasi-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
wasmtime = "0.35.3"
wasmtime-wasi = "0.35.3"